tests/compile-fail/tuple_captures/noncontiguous1.stderr
error: non-contiguous tuple binding: `_1` is missing
 --> tests/compile-fail/tuple_captures/noncontiguous1.rs:2:59
  |
2 |     let _ = try_match::try_match!(Some((1, 2)), Some((_0, _2)));
  |                                                           ^^
